--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <title>Centro de Flebología y Medicina Estética</title>
 </head>
 <body>
-    <header class="header">
-        <div class="logo-container">
-            <img src="" alt="" class="logo">
-            <h1>Centro de Flebolog&iacute;a y Medicina Est&eacute;tica</h1>
+    <header>
+        <img src="img/logos/Logo simple.png" alt="Dra. Gabriela Tuli&aacute;n">
+        <div class="logo"><h1>Centro de Flebolog&iacute;a y Medicina Est&eacute;tica</h1></div>
+        <div class="hamburger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
         </div>
-        <nav class="menu">
-            <a href="#" class="menu-toggle">☰</a>
+        <nav class="nav-bar">
+            <ul>
+                <li>
+                    
+                </li>
+            </ul>
         </nav>
     </header>
     <main>
